po: Add customizable 'fetch-po' script.
* gettext-tools/wizard/po-templates/traditional/fetch-po: New file.
* gettext-tools/wizard/Makefile.am (po_SCRIPTS): New variable.
(EXTRA_DIST): Add the po_SCRIPTS.
* gettext-tools/wizard/gettextize.in: Copy but don't overwrite po/fetch-po.
* gettext-tools/wizard/po-templates/traditional/Makefile.in.in (fetch-po): New
target.
* gettext-tools/examples/po/Makefile.am (fetch-po): New target.
* gettext-tools/examples/hello-*/po/Makefile.am (fetch-po): New target.
* gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile (fetch-po): New
target.
* gettext-tools/doc/gettext.texi (po/fetch-po): New subsection.
(po/LINGUAS): Explain how it related to the 'fetch-po' script.
(Release Management): Document how to fetch the PO files before a release.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,10 @@ Version 1.0 - October 2025
     PO files from a translation project's site on the internet, and
     updates the LINGUAS file accordingly.
 
+  * In a po/ directory, a new script 'fetch-po' is now added by 'gettextize'.
+    It provides the standard interface for fetching the translated PO files.
+    It typically either invokes the 'po-fetch' program or does nothing.
+
 # Improvements for translators:
   * msginit:
     - When the PO file already exists, 'msginit' now updates it w.r.t. the
