New program 'msgpre'.
* gettext-tools/src/msgpre.c: New file, based on gettext-tools/src/msgfilter.c.
* gettext-tools/src/FILES: Describe msgpre.c.
* gettext-tools/src/Makefile.am (bin_PROGRAMS): Add msgpre.
(msgpre_SOURCES, msgpre_LDADD, msgpre_DEPENDENCIES, msgpre_CPPFLAGS,
msgpre_LDFLAGS): New variables.
* gettext-tools/po/POTFILES.in: Add msgpre.c.
* gettext-tools/man/msgpre.x: New file.
* gettext-tools/man/Makefile.am (man_aux): Add msgpre.x.
(man_MAN1SRC): Add msgpre.1.
(man_HTML): Add msgpre.1.html.
(msgpre.1, msgpre.1.html): Add dependencies.
* gettext-tools/doc/gettext.texi (msgpre Invocation): New section.
* gettext-tools/doc/msgpre.texi: New file.
* gettext-tools/doc/Makefile.am (gettext_TEXINFOS): Add it.
* gettext-tools/Makefile.am (programs-for-distdir): Create msgpre.
(distdir1, gen-man1): Update for the msgpre.1 manual page.
* NEWS: Mention the new program.

--- a/NEWS
+++ b/NEWS
@@ -37,8 +37,10 @@ Version 1.0 - December 2025
       an error message in this situation.
 
   * Pretranslation:
-    - A new program 'spit' is provided, that implements machine translation
-      through a locally installed Large Language Model (LLM).
+    - Two new programs, 'msgpre' and 'spit', are provided, that implement
+      machine translation through a locally installed Large Language Model
+      (LLM).  'msgpre' applies to an entire PO file, 'spit' to a single
+      message.
     - The documentation has a new chapter "Pretranslation".
 
 # Programming languages support:
