po-fetch: Clarify the directory.
Reported by Simon Josefsson in
<https://lists.gnu.org/archive/html/bug-gettext/2025-12/msg00030.html>.

* gettext-tools/misc/po-fetch.in (func_usage): Mention the output files
location.
* gettext-tools/doc/po-fetch.texi: Likewise.

--- a/gettext-tools/doc/po-fetch.texi
+++ b/gettext-tools/doc/po-fetch.texi
@@ -37,6 +37,10 @@ Make changes in the @code{git} index, to prepare for a @code{git} commit.
 
 @end table
 
+@subsubsection Output files location
+
+The PO files and the @code{LINGUAS} file are stored in the current directory.
+
 @subsubsection Informative output
 
 @table @samp
