--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2025 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2026 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @pindex xgettext
@@ -188,8 +188,8 @@ the line with the string there is merely a blank line.
 @item --check[=@var{CHECK}]
 @opindex --check@r{, @code{xgettext} option}
 @cindex supported syntax checks, @code{xgettext}
-Perform a syntax check on msgid and msgid_plural.  The supported checks
-are:
+Perform a syntax check on msgid and msgid_plural.
+The supported checks that are disabled by default and that can be enabled are:
 
 @table @samp
 @item ellipsis-unicode
@@ -223,10 +223,36 @@ where @var{name} is the name of a valid syntax check.  If a flag is
 prefixed by @code{no-}, the meaning is negated.
 
 Some tests apply the checks to each sentence within the msgid, rather
-than the whole string.  xgettext detects the end of sentence by
+than the whole string.  @code{xgettext} detects the end of sentence by
 performing a pattern match, which usually looks for a period followed by
 a certain number of spaces.  The number is specified with the
 @code{--sentence-end} option.
+
+@item --no-check[=@var{CHECK}]
+@opindex --no-check@r{, @code{xgettext} option}
+Don't perform a syntax check on msgid and msgid_plural
+that is enabled by default.
+The supported checks that are enabled by default are:
+
+@table @samp
+@item url
+Prohibit a URL inside a string.
+
+@item email
+Prohibit an email address inside a string.
+
+@end table
+
+The option has an effect on all input files.
+To disable a check for a certain string,
+you can mark it with an @code{xgettext:} special comment in the source file.
+For example, if you want to suppress the check on a particular string,
+add the following comment:
+
+@example
+/* xgettext: no-email-check */
+gettext ("Specify your@@email-address.com here.");
+@end example
 
 @item --sentence-end[=@var{TYPE}]
 @opindex --sentence-end@r{, @code{xgettext} option}
