cldr-plurals: Fix parsing of plurals.xml from CLDR 38 or newer.
Reported by Michele Locati at <https://savannah.gnu.org/bugs/?66378>.

* gettext-tools/src/cldr-plural-exp.c (eval_relation): Accept operands 'c', 'e'.
* gettext-tools/src/cldr-plural.y (yylex): Likewise.
* gettext-tools/src/cldr-plurals.c (extract_rules): Test for type='cardinal'.
(get_XcY_end, force_spaces, remove_XcY, remove_empty_examples): New functions.
(main): Invoke force_spaces, remove_XcY, remove_empty_examples.
* gettext-tools/tests/cldr-plurals-1: Add more tests.
* AUTHORS: Add Michele Locati.

--- a/AUTHORS
+++ b/AUTHORS
@@ -91,3 +91,6 @@ Assigns past and future changes.
 GETTEXT         John Darrington
 Assigns past and future changes.
 (No contributions so far.)
+
+GETTEXT         Michele Locati
+Assigns past and future changes.
